# HandGestureDetection

./: CMakeLists.txt  actions.cpp  actions.h  hand.cpp  hand.h  main.cpp  utils.cpp  utils.h
